--- a/manuscrit_G_LEFEBVRE/intro.tex
+++ b/manuscrit_G_LEFEBVRE/intro.tex
@@ -87,8 +87,8 @@ Les résultats de ce second chapitre sont un premier pas vers la compréhension 
 Dans un troisième chapitre, les aspects numériques seront abordés. 
 %En particulier, il a fallu faire face à une instabilité numérique que l'on présentera et à laquelle l'équipe n'avait jamais été confrontée avec les schémas classiques utilisés. %qu'elle utilisait. 
 Nous étudions ici des croissances de tumeurs avec traitement, sur du long terme et avec de forts rétrécissements de la taille induit par les traitements. Ce sont là autant de raisons qui présentent l'originalité du problème. Nous montrerons que les champs de vitesses non communs obtenus lors de la simulation numérique  sont à l'origine d'instabilités numériques. 
-%Enfin un nouveau schéma de transport sera proposé, le \twinweno, pour palier à cette instabilité.
-Enfin une variante du schéma de transport sera proposé, le \twinweno, pour palier à cette instabilité.
+%Enfin un nouveau schéma de transport sera proposé, le \twinweno, pour pallier à cette instabilité.
+Enfin une variante du schéma de transport sera proposé, le \twinweno, pour pallier à cette instabilité.
 
 \paragraph{}
 Dans le quatrième chapitre, nous détaillerons la reconstruction %comment construit-on 
