--- a/manuscrit_G_LEFEBVRE/resume_rapporteur.tex
+++ b/manuscrit_G_LEFEBVRE/resume_rapporteur.tex
@@ -95,7 +95,7 @@ composantes, va ainsi traduire le caractère \heterogene de la métastase.
 La robustesse du critère est également discutée, avant de comparée l'\hetero clinique à celle fournit par la simulation numérique. 
 
 
-Finalement, ce quantificateur de l'\hetero met en avant les limitations du modèle EDP dont la sensibilité de paramètres non mesurables cliniquement (ou n'étant pas en notre possession) semble importante. Une étude du problème inverse serait à mener pour approfondir cela. Des données IRM notamment pourraient venir palier au manque d'information sur la vascularisation.
+Finalement, ce quantificateur de l'\hetero met en avant les limitations du modèle EDP dont la sensibilité de paramètres non mesurables cliniquement (ou n'étant pas en notre possession) semble importante. Une étude du problème inverse serait à mener pour approfondir cela. Des données IRM notamment pourraient venir pallier au manque d'information sur la vascularisation.
 %, bien qu'il résiderait quelques indéterminées. 
 %D'autre pistes sont encore à explorer comme l'ajout de paramètres statistiques en faisant du machine learning sur une plus large cohorte de patient par exemple. 
 %On pourrait également imaginé un autre modèle EDPs, dans lequel l'\hetero serait une variable à part  entière, et pourrait donc ainsi gouverner les rechutes. 
