Ajout graph patient avec mutation genetique

--- a/manuscrit_G_LEFEBVRE/annexe_structure_code.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_structure_code.tex
@@ -62,7 +62,7 @@ Le code de calcul générant le pourcentage d'\hetero aussi bien clinique que nu
 \item Le code s'appuie sur des langages différents :
 \begin{myitemize}[label=$-$]
 \item C++, avec la librairie ITK. Passage quasiment obligatoire (il y a très peu d'alternative) pour pouvoir traiter des données au format DICOM.
-\item Python, avec la librairie Scikit-learn, qui contient un module dédié au mélange gaussien.
+\item Python, avec la librairie Scikit-learn~\cite{pedregosa2011scikit}, qui contient un module dédié au mélange gaussien.
 \end{myitemize}
 \end{myitemize}
 
