--- a/manuscrit_G_LEFEBVRE/biblio.bib
+++ b/manuscrit_G_LEFEBVRE/biblio.bib
@@ -732,6 +732,16 @@ urldate = {20/07/2015}
   publisher={Elsevier}
 }
 
+@article{pedregosa2011scikit,
+  title={Scikit-learn: Machine learning in Python},
+  author={Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and others},
+  journal={The Journal of Machine Learning Research},
+  volume={12},
+  pages={2825--2830},
+  year={2011},
+  publisher={JMLR. org}
+}
+
 @article{jones2014scipy,
   title={$\{$SciPy$\}$: Open source scientific tools for $\{$Python$\}$},
   author={Jones, Eric and Oliphant, Travis and Peterson, Pearu},
